complete rework of the courses data flow  * created a new lookup table (course_terms)  * moved assignments to the new lookup table  * moved supporting_skills to the new lookup table  * moved the courses edit view from Show to Edit (where it should be)

--- a/app/views/courses/_enrolled_students.html.erb
+++ b/app/views/courses/_enrolled_students.html.erb
@@ -6,7 +6,7 @@
 	<table class='master'>
 		<thead>
 			<tr>
-				<th width='1px'>Acm?</th>
+				<th width='1px'><acronym title="This student has an accommodation in this course">Acm?</acronym></th>
 				<th colspan='0'>Enrolled Students (<%= enrollments.size %>)</th>
 			</tr>
 		</thead>
