--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -6,7 +6,7 @@
 <div id='details' class='course_list'>
 	<table class='master'>
 		<thead>
-			<tr><th>Enrolled Students</th><tr>
+			<tr><th>Enrolled Students</th></tr>
 		</thead>
 		<tbody>
 			<tr class='help'><td><--&nbsp; Choose a course from the list at the left or add a new one</td></tr>
