--- a/app/views/courses/_course_list.html.erb
+++ b/app/views/courses/_course_list.html.erb
@@ -1,22 +1,22 @@
 <div id='course_list'>
-	<table id='courses' class='master'>
-		<thead>
-		  <tr>
-		    <th>Course <%= "(#{@courses.length})" unless @courses.blank? %></th>
-		    <th>Term</th>
-		  </tr>
-		</thead>
-		<tbody>
-			<% if current_controller?('courses') then %>
-				<tr><td colspan='0'><%= link_to 'Add New Course', new_course_path, :class=>'btn standard' %></td></tr>
-			<% end %>
-			<% for course in @courses %>
-				<tr class="<%= cycle('even', 'odd') + (current_page?(:id => course) ? ' current' : '') %>" 
-						onclick="location.href='<%= url_for( :action => :show, :id => course.id ) %>'" >
-					<%= content_tag :td, link_to( course.name, :action => :show, :id => course.id ) %>
-					<%= content_tag :td, course.term.name %>
-				</tr>
-			<% end %>
-		</tbody>
-	</table>
+  <table id='courses' class='master'>
+    <thead>
+      <tr>
+        <th>Course Name <%= "(#{@courses.length})" unless @courses.blank? %></th>
+      </tr>
+    </thead>
+    <tbody>
+      <% if current_controller?('courses') then %>
+        <tr><td colspan='0'><%= link_to 'Add New Course', new_course_path, :class=>'btn standard' %></td></tr>
+      <% end %>
+      <% @courses.each do |course| %>
+          <tr class="<%= cycle('even', 'odd') + (current_page?(:id => course) ? ' current' : '') %>"
+              onclick="location.href='<%= url_for( :action => "edit", :id => course.id ) %>'" >
+            <td>
+              <%= link_to( course.name, :action => "edit", :id => course.id ) %>
+            </td>
+          </tr>
+      <% end %>
+    </tbody>
+  </table>
 </div>
