--- a/app/views/courses/_students_tab.html.erb
+++ b/app/views/courses/_students_tab.html.erb
@@ -1,12 +1,12 @@
 <div class="box span-14 last">
-  <div  style="overflow-y:scroll; height:350px;">
+  <div  style="overflow-y:scroll; height:250px;">
     <div class='span-4'>
       <form id='class_of_form'>
         <%= select_tag 'class_of', options_for_select(class_range.insert(0, 'Class Of ...'), ' '),
           :onchange =>
           remote_function(
           :update => 'student_list',
-          :url => { :action => :show },
+          :url => { :action => "edit" },
           :with => "'value=' + value + '||Class Of ' + value + '||C'",
           :method => :get), :class=>'span-4' %>
       </form>
@@ -18,7 +18,7 @@
           :onchange =>
             remote_function(
             :update => 'student_list',
-            :url => { :action => :show },
+            :url => { :action => "edit" },
             :with => "'value=' + value + '||Home Room ' + options[selectedIndex].text + '||H'",
             :method => :get), :class => 'span-4' }  %>
       </form>
