--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -1,27 +1,27 @@
 <% content_for :left do %>
-		<%= show_course_list %>
+  <%= show_course_list %>
 <% end %>
 
 <%= error_messages_for :course, :header_message => "Please Try Again!", :message => "We had some problems saving your changes:" %>
 
 <div class="box span-14">
-	<% form_for (@course) do |f| %>
-	  <fieldset>
-	    <%= content_tag :legend, 'New Course' %>
+  <% form_for (@course) do |f| %>
+    <fieldset>
+      <%= content_tag :legend, 'New Course' %>
 
-			<%= f.label :name, {}, :class => 'req' %>
-			<%= f.text_field :name %>
+      <%= f.label :name, {}, :class => 'req' %>
+      <%= f.text_field :name %>
       <br />
-			<%= f.label :term_id, {}, :class => 'req' %>
-			<%= collection_select :course, :term_id, Term.active, :id, :name %>
+      <%#= f.label :term_id, {}, :class => 'req' %>
+      <%#= collection_select :course, :term_id, Term.active, :id, :name %>
       <br />
-			<%= f.label :grading_scale_id, {}, :class => 'req' %>
-			<%= collection_select :course, :grading_scale_id, GradingScale.find(:all), :id, :name %>
+      <%= f.label :grading_scale_id, {}, :class => 'req' %>
+      <%= collection_select :course, :grading_scale_id, GradingScale.find(:all), :id, :name %>
 
-			<div class="spacer">
-				<%= f.submit 'Create', :class=> 'btn positive' %>
-				<%= link_to 'Cancel', {:action=> 'index', :controller=> 'courses'}, :class => 'btn positive' %>
-			</div>
-		</fieldset>
-	<% end %>
+      <div class="spacer">
+        <%= f.submit 'Create', :class=> 'btn positive' %>
+        <%= link_to 'Cancel', {:action=> 'index', :controller=> 'courses'}, :class => 'btn positive' %>
+      </div>
+    </fieldset>
+  <% end %>
 </div>
