still re-working the Course changes

--- a/app/views/assignments/show.html.erb
+++ b/app/views/assignments/show.html.erb
@@ -1,5 +1,5 @@
 <% content_for :left do %>
-	<%= show_course_list %>
+	<%= show_course_term_list %>
 <% end %>
 
 <%= error_messages_for :assignment, :header_message => "Please Try Again!", :message => "We had some problems saving your changes:" %>
