--- a/app/views/assignments/_assignment_list.erb
+++ b/app/views/assignments/_assignment_list.erb
@@ -5,28 +5,33 @@
       <th>Possible points</th>
       <th>Type</th>
       <th>Due Date</th>
-			<th width='1'></th>
+      <th width='1'></th>
     </tr>
   </thead>
-	<tbody>
-		<tr><td colspan='0'><%= link_to 'Add Assignment', new_assignment_path( :course_id => @course.id ), :class => 'btn positive' %></td></tr>
-		
-	<% if @assignments.blank? %>
-		<tr><td colspan='0'>No Assignments Found</td></tr>
-	<% else %>
-		<% for assignment in @assignments %>
-			<tr class="<%= cycle('odd', 'even') %>" onclick="location.href='<%= url_for( :action => :edit, :id => assignment.id ) %>'">
-				<%= content_tag :td, assignment.name %>
-				<%= content_tag :td, assignment.possible_points %>
-				<%= content_tag :td, assignment.assignment_category.name %>
-				<%= content_tag :td, assignment.due_date_formated %>
-				<td><%= button_to 'Delete', assignment, 
-									:method => :delete, 
-									:disabled => !assignment.assignment_evaluations.empty?,
-                  :class => "btn negative " + (assignment.assignment_evaluations.empty? ? '' : 'disabled'),
-									:confirm => "Are you sure you want to delete the '" + assignment.name + "' assignment?" %></td>
-			</tr>
-		<% end %>
-	<% end %>
-	</tbody>
+  <tbody>
+    <tr><td colspan='0'>
+        <%= link_to 'Add Assignment',
+          new_assignment_path( :course_term_id => @course_term.id ),
+          :class => 'btn positive' %>
+      </td>
+    </tr>
+
+    <% if @assignments.blank? %>
+      <tr><td colspan='0'>No Assignments Found</td></tr>
+    <% else %>
+      <% for assignment in @assignments %>
+        <tr class="<%= cycle('odd', 'even') %>" onclick="location.href='<%= url_for( :action => :edit, :id => assignment.id ) %>'">
+          <%= content_tag :td, assignment.name %>
+          <%= content_tag :td, assignment.possible_points %>
+          <%= content_tag :td, assignment.assignment_category.name %>
+          <%= content_tag :td, assignment.due_date_formated %>
+          <td><%= button_to 'Delete', assignment,
+              :method => :delete,
+              :disabled => !assignment.assignment_evaluations.empty?,
+              :class => "btn negative " + (assignment.assignment_evaluations.empty? ? '' : 'disabled'),
+              :confirm => "Are you sure you want to delete the '" + assignment.name + "' assignment?" %></td>
+        </tr>
+      <% end %>
+    <% end %>
+  </tbody>
 </table>
