--- a/app/views/assignments/edit.html.erb
+++ b/app/views/assignments/edit.html.erb
@@ -4,7 +4,7 @@
 <% end %>
 
 <% content_for :left do %>
-  <%= show_course_list %>
+	<%= show_course_term_list %>
 <% end %>
 
 <%= error_messages_for :assignment, :header_message => "Please Try Again!", :message => "We had some problems saving your changes:" %>
@@ -14,7 +14,7 @@
     <fieldset>
       <% header = @assignment.name? ? "Editing: #{@assignment.name}" : "New Assignment" %>
       <%= content_tag :legend, header %>
-      <%= f.hidden_field :course_id, :value => @course.id %>
+      <%= f.hidden_field :course_term_id, :value => @course_term.id %>
 
       <%= f.label :name, {}, :class => 'req' %>
       <%= f.text_field :name %>
@@ -35,7 +35,7 @@
 
       <div class='spacer'>
         <%= submit_tag 'Save', :class=> 'btn positive' %>
-        <%= link_to 'Cancel', assignment_path(@course), :class => 'btn standard' %>
+        <%= link_to 'Cancel', assignment_path(@course_term), :class => 'btn standard' %>
       </div>
     </fieldset>
   <% end %>
