--- a/app/views/evaluations/_skills.html.erb
+++ b/app/views/evaluations/_skills.html.erb
@@ -1,4 +1,4 @@
-<% skills = @course_term.course.supporting_skills %>
+<% skills = @course_term.supporting_skills %>
 
 <form id='grade_grid'>
 <table class='grade-grid sortable scroll master'>
