--- a/public/stylesheets/local.css
+++ b/public/stylesheets/local.css
@@ -71,6 +71,7 @@ table.master {
 .assign-name, .assign-points, .assign-date {font-size: 0.9em;white-space:nowrap;text-align:center;}
 .assign-points {font-size: 0.8em;}
 .assign-date {font-size: 0.8em;}
+.skill-name {font-size: 0.9em; text-align:left;}
 
 tr.help td {
   background-color: #006600;
