Reworked skills assesment and evaluation  * skills evaluations now work  * the Javascript on the evaluation SHOW page now takes into account both the assignment & skills tables

--- a/app/views/evaluations/_grades.html.erb
+++ b/app/views/evaluations/_grades.html.erb
@@ -16,7 +16,7 @@
 				<th>No Assignments Found</th>			
 			<% else %>
 				<% for assignment in assignments %>
-					<th width='50' class='grade' id='<%= assignment.id %>'>
+					<th width='50' class='grade nosort' id='<%= assignment.id %>'>
 						<div class='assign-name'><%= h assignment.name %></div>
 						<div class='assign-points'><%= h assignment.possible_points %> pts</div>
 						<div class='assign-date'><%= h assignment.due_date ? assignment.due_date.to_s(:due_date) : '.' %></div>
