--- a/app/views/evaluations/_skills.html.erb
+++ b/app/views/evaluations/_skills.html.erb
@@ -48,7 +48,9 @@
                   :id			=> [:s => student.id, :a => skill.id],
                   :tabindex	=> a_counter,
                   :onchange => remote_function( :url => {:action => "update"}, :method => "put",
-                  :with   => "'student=#{student.id}&skill=#{skill.id}&score=' + value"),
+                  :with   => "'student=#{student.id}&skill=#{skill.id}&score=' + value",
+                  :loading => "Element.show('spinner')",
+                  :complete => "Element.hide('spinner')"),
                   :size		=> '5' %>
               <% else %>
                 <%= text_field_tag 'score', '',
@@ -56,7 +58,9 @@
                   :id			=> [:s => student.id, :a => skill.id],
                   :tabindex	=> a_counter,
                   :onchange => remote_function( :url => {:action => "update"}, :method => "put",
-                  :with   => "'student=#{student.id}&skill=#{skill.id}&score=' + value"),
+                  :with   => "'student=#{student.id}&skill=#{skill.id}&score=' + value",
+                  :loading => "Element.show('spinner')",
+                  :complete => "Element.hide('spinner')"),
                   :size		=> '5' %>
               <% end %>
 
