changed 'Campus' to 'Site' for better readability.

--- a/app/views/settings/_settings_list.erb
+++ b/app/views/settings/_settings_list.erb
@@ -1,6 +1,6 @@
 <% items = [
 		{:name => 'Assignment Types', :url => '/settings/assignment_categories'},
-		{:name => 'Campus Info', :url => '/settings/sites'},
+		{:name => 'Campus Sites', :url => '/settings/sites'},
 		{:name => 'Import Data', :url => '/settings/imports'},
 		{:name => 'Grading Periods', :url => '/settings/grading_periods'},
 		{:name => 'Grading Scales', :url => '/settings/grading_scales'},
