--- a/app/views/settings/sites/index.html.erb
+++ b/app/views/settings/sites/index.html.erb
@@ -14,7 +14,7 @@
 	<tbody>
 		<tr class="<%= cycle('odd', 'even')%>">
 		  <td colspan='0'>
-		    <%= link_to "Add Campus", new_site_path(), :class => 'btn positive' %>
+		    <%= link_to "Add Site", new_site_path(), :class => 'btn positive' %>
 		  </td>
 		</tr>
 		<% for site in @sites %>
